--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI PACENOTES</title>
+    <title>RaceLink</title>
   </head>
   <body>
     <div id="app" class="flex"></div>
